--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}! the best app ever
+  p Welcome to #{title}! the best app ever!!!!
